# Q2RTX

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  INSTALL  Makefile  README  appveyor.yml  build_materials.py  changelog.md  compile_shaders.bat  config_vkpt  configure  filesystem.cfg.example  license.txt  notice.txt  q2pro.6  readme.md  version.sh  vulkan-1.lib
asm/: fpu.s  (+9 more)
src/: CMakeLists.txt  anormtab.h  bsp.c  bsp.h  cl_aastat.c  cl_console.c  cl_demo.c  cl_download.c  cl_ents.c  cl_fx.c  cl_http.c  cl_input.c  cl_keys.c  cl_local.h  cl_locs.c  cl_main.c  cl_newfx.c  cl_null.c  cl_parse.c  cl_precache.c  cl_pred.c  cl_public.h  cl_ref.c  cl_scrn.c  cl_tent.c  cl_view.c  cmd.c  cmodel.c  cmodel.h  com_local.h  common.c  common.h  crc.c  cvar.c  d_bsp.h  d_md2.h  d_md3.h  d_pak.h  d_pcx.h  d_sp2.h  (+149 more)
src/3zb2/: CMakeLists.txt  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c
src/3zb2/bot/: bot.c  fire.c  func.c  za.c
src/3zb2/header/: bot.h  botstr.h  ctf.h  game.h  local.h  menu.h  player.h  shared.h
src/3zb2/monster/: move.c
src/3zb2/player/: client.c  hud.c  menu.c  trail.c  view.c  weapon.c
src/3zb2/shared/: shared.c
src/action/: Makefile  Makefile.lcc  Makefile.wedit  a_cmds.c  a_ctf.c  a_ctf.h  a_dom.c  a_game.c  a_game.h  a_match.c  a_team.c  a_team.h  a_tourney.c  a_vote.c  a_vote.h  a_xgame.c  a_xmenu.c  cgf_sfx_glass.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  game.h  game.sln  game.vcproj  p_client.c  p_hud.c  p_view.c  (+8 more)
src/baseq2/: baseq2.rc  g_ai.c  g_ai.cpp  g_chase.c  g_cmds.c  g_cmds.cpp  g_combat.c  g_combat.cpp  g_func.c  g_func.cpp  g_items.c  g_items.cpp  g_local.h  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_monster.c  g_monster.cpp  g_phys.c  g_phys.cpp  g_ptrs.c  g_ptrs.cpp  g_ptrs.h  g_ptrs_compat_v2.c  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.c  g_target.c  g_target.cpp  g_trigger.c  g_trigger.cpp  g_turret.c  g_turret.cpp  g_utils.c  g_utils.cpp  g_weapon.c  g_weapon.cpp  (+80 more)
src/client/: ascii.c  cin.c  cin.cpp  client.h  console.c  console.cpp  crc.c  crc.cpp  demo.c  demo.cpp  download.c  download.cpp  effects.c  effects.cpp  entities.c  entities.cpp  gtv.c  gtv.cpp  http.c  http.cpp  input.c  input.cpp  keys.c  keys.cpp  locs.c  locs.cpp  main.c  main.cpp  newfx.c  null.c  null.cpp  parse.c  parse.cpp  precache.c  precache.cpp  predict.c  refresh.c  refresh.cpp  screen.c  screen.cpp  (+4 more)
src/client/sound/: al.c  dma.c  main.c  mem.c  mix.c  ogg.c  qal.c  qal.h  sound.h
src/client/ui/: demos.c  demos.cpp  menu.c  menu.cpp  playerconfig.c  playerconfig.cpp  playermodels.c  playermodels.cpp  q2pro.menu  script.c  script.cpp  servers.c  servers.cpp  ui.c  ui.cpp  ui.h
src/common/: async.c  bsp.c  bsp.cpp  cmd.c  cmd.cpp  cmodel.c  cmodel.cpp  common.c  common.cpp  cvar.c  cvar.cpp  error.c  error.cpp  features.h  field.c  field.cpp  fifo.c  fifo.cpp  files.c  files.cpp  math.c  math.cpp  mdfour.c  mdfour.cpp  msg.c  msg.cpp  pmove.c  pmove.cpp  prompt.c  prompt.cpp  qbvhmp.c  sizebuf.c  sizebuf.cpp  tests.c  tests.cpp  utils.c  utils.cpp  zone.c  zone.cpp
src/common/net/: chan.c  chan.cpp  inet_ntop.h  inet_pton.h  net.c  net.cpp  unix.h  win.h
src/common/x86/: fpu.c  math.S
src/ctf/: CMakeLists.txt  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c
src/ctf/header/: ctf.h  game.h  local.h  menu.h  shared.h
src/ctf/menu/: menu.c
src/ctf/monster/: move.c  player.h
src/ctf/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/ctf/shared/: shared.c
src/game/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_ptrs.c  g_ptrs.h  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  genptr.py  m_actor.c  m_berserk.c  m_berserk.h  m_boss2.c  m_boss2.h  m_boss3.c  m_boss31.h  m_boss32.h  m_brain.c  m_brain.h  m_chick.c  m_flipper.c  m_flipper.h  m_float.c  m_float.h  m_flyer.h  m_gladiator.c  m_gladiator.h  m_gunner.h  m_hover.c  (+18 more)
src/i386/: d_ifacea.h  d_polysa.s  math.s  qasm.h  r_draw16.s  r_drawa.s  r_scana.s  r_varsa.s
src/refresh/: debug.c  debug_text.c  draw.c  hq2x.c  images.c  light_lists.c.h  model_iqm.c  models.c  surf.c  world.c
src/refresh/debug_fonts/: cursive.h  futural.h  futuram.h  gothgbt.h  gothgrt.h  gothiceng.h  gothicger.h  gothicita.h  gothitt.h  rowmand.h  rowmans.h  rowmant.h  scriptc.h  scripts.h  timesi.h  timesib.h  timesr.h  timesrb.h
src/rogue/: CMakeLists.txt  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_newai.c  g_newdm.c  g_newfnc.c  g_newtarg.c  g_newtrig.c  g_newweap.c  g_phys.c  g_spawn.c  g_sphere.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c
src/server/: ac.c  ac.cpp  commands.c  commands.cpp  entities.c  entities.cpp  game.c  game.cpp  init.c  init.cpp  main.c  main.cpp  mvd.c  mvd.cpp  save.c  save.cpp  send.c  send.cpp  server.h  user.c  user.cpp  world.c
src/shared/: m_flash.c  shared.c  shared.cpp
src/unix/: evdev.c  hunk.c  lirc.c  oss.c  sound.c  system.c  tty.c  tty.h  video.c  video.cpp
src/windows/: ac.c  ac.cpp  client.c  client.h  debug.c  debug.cpp  dinput.c  dsound.c  glimp.c  glimp.h  hunk.c  pthread.c  swimp.c  system.c  system.cpp  wave.c  wave.cpp  wgl.c  wgl.h
src/xatrix/: CMakeLists.txt  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c
src/zaero/: CMakeLists.txt  g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c
(+1175 files in other folders)
